ordear el repositorio

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;700&display=swap" rel="stylesheet">
     <!-- Vincula Tailwind CSS desde CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="icon" href="img/WhatsApp_Image_2024-10-17_at_4.48.58_PM-removebg-preview.png">
+    <link rel="icon" href="img/Logo.png">
 </head>
 
 <body class="min-h-screen flex flex-col bg-gradient-to-br from-[#0a0908] to-[#ba5e00] text-white">
@@ -16,7 +16,7 @@
     <!-- Navbar -->
     <header class="bg-[#ba5e00] fixed top-0 left-0 w-full z-10 shadow-lg p-4 flex justify-between items-center">
         <div class="flex items-center">
-            <img src="img/WhatsApp_Image_2024-10-17_at_4.48.58_PM-removebg-preview.png" alt="Logo de la Empresa" class="w-20 h-20 rounded-full mr-3">
+            <img src="img/Logo.png" alt="Logo de la Empresa" class="w-20 h-20 rounded-full mr-3">
             <h1 class="text-xl">Bell check Finance</h1>
         </div>
         <nav class="flex space-x-4 flex-1 justify-end">
@@ -28,7 +28,7 @@
     <!-- Hero Section -->
     <main class="flex-1 text-center p-8 bg-[#0a0908] rounded-xl mt-24 shadow-lg mx-4">
         <div class="max-w-full mx-auto mb-8">
-            <img src="img/WhatsApp_Image_2024-10-17_at_4.48.58_PM-removebg-preview.png" alt="Imagen de la Empresa" class="w-full max-w-xl mx-auto rounded-xl shadow-md">
+            <img src="img/Logo.png" alt="Imagen de la Empresa" class="w-full max-w-xl mx-auto rounded-xl shadow-md">
         </div>
         <h2 class="text-[#ba5e00] text-4xl mt-4">Bienvenido a Nuestra Empresa</h2>
         <p class="text-lg mt-2">Nos especializamos en ofrecer soluciones financieras que mejoran la gestión de tu empresa.</p>
@@ -49,7 +49,7 @@
             <h2 class="text-[#ba5e00] text-3xl mb-4">Login</h2>
             <p class="text-white">Accede a tu cuenta para gestionar tus servicios.</p>
             <!-- Botón Login debajo de la sección -->
-            <a href="Archivos  html/LG.html" class="bg-[#ba5e00] text-white text-lg font-bold py-3 px-6 rounded-lg shadow-lg transition-transform transform hover:bg-[#FFA500] hover:translate-y-[-5px] mt-6 inline-block">Login</a>
+            <a href="LG.html" class="bg-[#ba5e00] text-white text-lg font-bold py-3 px-6 rounded-lg shadow-lg transition-transform transform hover:bg-[#FFA500] hover:translate-y-[-5px] mt-6 inline-block">Login</a>
         </div>
     </section>
 
