--- a/CCT.html
+++ b/CCT.html
@@ -12,7 +12,7 @@
     <header class="navbar">
         <h1><img src="img/Logo.png" alt="Logo" class="navbar-logo"> Bell Check Finance</h1>
         <nav>
-            <a href="index.html">Inicio</a>
+            <a href="">Inicio</a>
            
             <a href="LG.html">Login</a>
         </nav>
