--- a/Rf.html
+++ b/Rf.html
@@ -24,7 +24,7 @@
                 <button
                     class="bg-[#ba5e00] text-white py-2 px-5 text-sm sm:text-lg font-bold rounded transition duration-300 ease-in-out hover:bg-[#d8a23e] w-full">Regresar</button>
             </a>
-            <a href="tablarf.html" class="w-full mb-2">
+            <a href="tablafr.html" class="w-full mb-2">
                 <button
                     class="bg-[#ba5e00] text-white py-2 px-5 text-sm sm:text-lg font-bold rounded transition duration-300 ease-in-out hover:bg-[#d8a23e] w-full">Revisar
                     Factura</button>
