--- a/interfaz.html
+++ b/interfaz.html
@@ -66,7 +66,7 @@
                 formulario a continuación con la información requerida. Esto te permitirá obtener un resumen detallado
                 de tus datos y facilitará la toma de decisiones.</p>
             <div class="flex-grow"></div> <!-- Esto empuja el botón hacia abajo -->
-            <a href="Gr.html"
+            <a href="Fr.html"
                 class="btn bg-[#ba5e00] text-white text-lg py-2 px-5 rounded-md transition-all transform hover:bg-[#a85000] hover:scale-105 hover:shadow-md w-[80%] text-center">Iniciar
             </a>
         </div>
