--- a/Fr.html
+++ b/Fr.html
@@ -23,7 +23,7 @@
             <a href="interfaz.html" class="w-full mb-2">
                 <button class="bg-[#ba5e00] text-white border-none py-2 px-5 text-lg font-bold rounded transition duration-300 ease-in-out hover:bg-[#d8a23e] w-full">Regresar</button>
             </a>
-            <a href="" class="w-full mb-2">
+            <a href="tablafr.html" class="w-full mb-2">
                 <button class="bg-[#ba5e00] text-white border-none py-2 px-5 text-lg font-bold rounded transition duration-300 ease-in-out hover:bg-[#d8a23e] w-full">Revisar Factura</button>
             </a>
             <img src="img/Logo.png" alt="Logo de la empresa" class="imagen-debajo mt-5 max-w-full rounded" width="600">
