--- a/tablafr.html
+++ b/tablafr.html
@@ -21,10 +21,24 @@
                     <th class="table__header-cell">Fecha de vencimiento</th>
                     <th class="table__header-cell">Monto de reporte</th>
                     <th class="table__header-cell">categoria</th>
-
+                    
                 </tr>
             </thead>
             <tbody>
+                <tr>
+                    <td class="table__cell">reporte ingresado</td>
+                    <td class="table__cell">dd/mm/aa</td>
+                    <td class="table__cell">dd/mm/aa</td>
+                    <td class="table__cell">$$</td>
+                    <td class="table__cell">dato ingresado</td>
+                </tr>
+                <tr>
+                    <td class="table__cell">reporte ingresado</td>
+                    <td class="table__cell">dd/mm/aa</td>
+                    <td class="table__cell">dd/mm/aa</td>
+                    <td class="table__cell">$$</td>
+                    <td class="table__cell">dato ingresado</td>
+                </tr>
                 <tr>
                     <td class="table__cell">reporte ingresado</td>
                     <td class="table__cell">dd/mm/aa</td>
