--- a/Index/LG.html
+++ b/Index/LG.html
@@ -14,7 +14,7 @@
   <!-- Barra de navegación -->
   <nav class="absolute top-0 left-0 w-full bg-[#ba5e00] text-white py-4 px-8 z-10">
     <div class="flex justify-between items-center">
-      <a href="index.html" class="text-white font-bold text-lg px-4 py-2 rounded-lg shadow-md transition duration-300 transform hover:bg-[#FFA500] hover:translate-y-[-5px]">INICIO</a>
+      <a href="" class="text-white font-bold text-lg px-4 py-2 rounded-lg shadow-md transition duration-300 transform hover:bg-[#FFA500] hover:translate-y-[-5px]">INICIO</a>
       <span class="text-white text-2xl font-bold">Bell Check Finance</span>
       
     </div>
@@ -22,7 +22,7 @@
 
   <!-- Contenedor del formulario de inicio de sesión -->
   <div class="flex justify-center items-center w-full h-full">
-    <form action="interfaz.html" class="bg-black bg-opacity-70 backdrop-blur-md shadow-lg rounded-xl p-10 max-w-sm w-full">
+    <form action="https://juanzapatat.github.io/Final-HTML/" class="bg-black bg-opacity-70 backdrop-blur-md shadow-lg rounded-xl p-10 max-w-sm w-full">
       <h2 class="text-3xl text-center text-white mb-6">INICIO DE SESIÓN</h2>
 
       <!-- Usuario Input -->
