--- a/Cg.html
+++ b/Cg.html
@@ -25,7 +25,7 @@
     </a>
     
     <!-- Imagen debajo de los botones y con tamaño mayor -->
-    <img src="img/logo.png" alt="Logo" class="w-40 h-40 mt-5 rounded-full mb-5 border white">
+    <img src="img/Logo.png" alt="Logo de la empresa" class="imagen-debajo mt-5 max-w-full rounded" width="600">
   </div>
 
   <!-- Contenedor principal -->
