--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <h1 class="text-xl">Bell check Finance</h1>
         </div>
         <nav class="flex space-x-4 flex-1 justify-end">
-            <a href="Index/CCT.html" class="bg-[#ba5e00] border  text-white text-lg font-bold py-3 px-6 rounded-lg shadow-lg transition-transform transform hover:bg-[#FFA500] hover:translate-y-[-5px]">Contacto</a>
-            <a href="Index/LG.html" class="bg-[#ba5e00] border  text-white text-lg font-bold py-3 px-6 rounded-lg shadow-lg transition-transform transform hover:bg-[#FFA500] hover:translate-y-[-5px]">Login</a>
+            <a href="CCT.html" class="bg-[#ba5e00] border  text-white text-lg font-bold py-3 px-6 rounded-lg shadow-lg transition-transform transform hover:bg-[#FFA500] hover:translate-y-[-5px]">Contacto</a>
+            <a href="LG.html" class="bg-[#ba5e00] border  text-white text-lg font-bold py-3 px-6 rounded-lg shadow-lg transition-transform transform hover:bg-[#FFA500] hover:translate-y-[-5px]">Login</a>
         </nav>
     </header>
 
