arreglo de contactos

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <h2 class="text-[#ba5e00] text-3xl mb-4">Contacto</h2>
             <p class="text-white">Puedes ponerte en contacto con nosotros a través del formulario o por teléfono.</p>
             <!-- Botón Contacto debajo de la sección -->
-            <a href="contacto.html" class="bg-[#ba5e00] text-white text-lg font-bold py-3 px-6 rounded-lg shadow-lg transition-transform transform hover:bg-[#FFA500] hover:translate-y-[-5px] mt-6 inline-block">Contacto</a>
+            <a href="CCT.html" class="bg-[#ba5e00] text-white text-lg font-bold py-3 px-6 rounded-lg shadow-lg transition-transform transform hover:bg-[#FFA500] hover:translate-y-[-5px] mt-6 inline-block">Contacto</a>
         </div>
     </section>
 
