Arreglo de favicon en las vistas y agregamos archivo taildwind

--- a/Fr.html
+++ b/Fr.html
@@ -7,6 +7,7 @@
     <title>Reporte de Finanzas</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="icon" href="img/WhatsApp_Image_2024-10-17_at_4.48.58_PM-removebg-preview.png">
+    <link rel="icon" href="img/Logo.png">
 </head>
 
 <body class="overflow-y-auto font-sans m-0 p-0 bg-gradient-to-r from-[#0a0908] to-[#ba5e00] text-[#f7f7f7] flex flex-col justify-between min-h-screen">
