--- a/LG.html
+++ b/LG.html
@@ -7,6 +7,7 @@
   <title>Interactive Animated Login Form</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="icon" href="img/WhatsApp_Image_2024-10-17_at_4.48.58_PM-removebg-preview.png">
+  <link rel="icon" href="img/Logo.png">
 </head>
 
 <body class="bg-gradient-to-r from-[#0a0908] to-[#ba5e00] flex justify-center items-center min-h-screen relative">
