--- a/tablacg.html
+++ b/tablacg.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gastos</title>
     <link rel="stylesheet" href="css/stylecg.css">
+    <link rel="icon" href="img/Logo.png">
+
 </head>
 
 <body class="body">
