--- a/tablafr.html
+++ b/tablafr.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reporte de Finanzas</title>
     <link rel="stylesheet" href="css/stylefr.css">
+    <link rel="icon" href="img/Logo.png">
 </head>
 
 <body class="body">
