--- a/CCT.html
+++ b/CCT.html
@@ -6,6 +6,7 @@
     <title>Contacto - Nombre de la Empresa</title>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/contacto.css">
+    <link rel="icon" href="img/Logo.png">
 </head>
 <body>
 
