--- a/Cg.html
+++ b/Cg.html
@@ -2,91 +2,71 @@
 <html lang="es">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Facturación y Control de Gastos</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="icon" href="img/Logo.png">
- 
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Control de Gastos</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="icon" href="img/Logo.png">
+    <link rel="icon" href="img/Logo.png">
 </head>
 
-<body class="bg-gradient-to-r from-[#0a0908] to-[#ba5e00] text-white flex">
+<body class="overflow-y-auto font-sans m-0 p-0 bg-gradient-to-r from-[#0a0908] to-[#ba5e00] text-[#f7f7f7] flex flex-col justify-between min-h-screen">
 
-  <!-- Barra lateral fija -->
-  <div class="w-64 bg-black bg-opacity-70 p-5 flex flex-col items-center fixed top-0 left-0 h-full">
-    <a href="interfaz.html" class="w-full mb-4">
-      <button class="bg-[#ba5e00] text-white font-bold py-4 px-6 w-full rounded transition-all transform hover:bg-[#d8a23e] hover:scale-105 hover:shadow-lg">
-        Regresar
-      </button>
-    </a>
-    <a href="tablacg.html" class="w-full mb-4">
-      <button class="bg-[#ba5e00] text-white font-bold py-4 px-6 w-full rounded transition-all transform hover:bg-[#d8a23e] hover:scale-105 hover:shadow-lg">
-        Revisar Gastos
-      </button>
-    </a>
-    
-    <!-- Imagen debajo de los botones y con tamaño mayor -->
-    <img src="img/Logo.png" alt="Logo de la empresa" class="imagen-debajo mt-5 max-w-full rounded" width="600">
-  </div>
+    <!-- Encabezado -->
+    <header class="w-full text-center bg-black bg-opacity-60 py-5">
+        <h1 class="text-2xl font-bold text-[#ba5e00]">Área de Control de Gastos </h1>
+    </header>
 
-  <!-- Contenedor principal -->
-  <div class="ml-64 w-full p-10 flex flex-col min-h-screen">
+    <!-- Contenedor principal con barra lateral y contenido -->
+    <div class="container flex flex-col lg:flex-row w-full max-w-screen-xl p-5 mx-auto">
+        <!-- Barra lateral -->
+        <nav class="barra_lateral w-full lg:w-[250px] bg-black bg-opacity-60 p-5 flex flex-col items-center mb-5 lg:mb-0">
+            <a href="interfaz.html" class="w-full mb-2">
+                <button class="bg-[#ba5e00] text-white border-none py-2 px-5 text-lg font-bold rounded transition duration-300 ease-in-out hover:bg-[#d8a23e] w-full">Regresar</button>
+            </a>
+            <a href="tablacg.html" class="w-full mb-2">
+                <button class="bg-[#ba5e00] text-white border-none py-2 px-5 text-lg font-bold rounded transition duration-300 ease-in-out hover:bg-[#d8a23e] w-full">Revisar Gastos</button>
+            </a>
+            <img src="img/Logo.png" alt="Logo de la empresa" class="imagen-debajo mt-5 max-w-full rounded" width="600">
+        </nav>
 
-    <!-- Contenedor de bienvenida -->
-    <div class="flex justify-center items-center mb-10">
-      <div class="bg-black/50 p-10 w-full md:w-3/4 rounded-lg">
-        <h1 class="text-5xl font-bold text-[#ba5e00] uppercase text-center mb-4">
-          Bienvenido al área de Control de Gastos
-        </h1>
-        <p class="text-center text-2xl">Por favor diligencie el formulario con los datos solicitados</p>
-      </div>
+        <!-- Contenido principal -->
+        <main class="flex-1 p-5 text-white overflow-auto w-full">
+            <div class="bienvenida text-center bg-black bg-opacity-60 p-7 rounded mb-5">
+                <h2 class="text-2xl font-bold text-[#ba5e00]">¡Bienvenido a nuestra área de Comtrol de Gastos!</h2>
+                <p class="text-base">Por favor diligencie el siguiente formulario para así llevar con efectividad Control de Gastos. </p>
+            </div>
+
+            <!-- Formulario -->
+            <form class="formulario flex flex-col gap-6 max-w-[450px] w-full p-5 bg-black bg-opacity-90 rounded mx-auto items-center">
+
+                <!-- Nombre del Gasto -->
+                <label for="nombre" class="text-[#ba5e00] font-bold text-center w-full">Nombre del Gasto:</label>
+                <input type="text" id="nombre" name="nombre" class="w-full p-2 text-sm border border-gray-400 rounded bg-[#333333] text-white text-center focus:border-[#ba5e00] outline-none">
+
+                <!-- Fecha  -->
+                <label for="fecha" class="text-[#ba5e00] font-bold text-center w-full">Fecha :</label>
+                <input type="date" id="fecha" name="fecha" class="w-full p-2 text-sm border border-gray-400 rounded bg-[#333333] text-white text-center focus:border-[#ba5e00] outline-none">
+
+
+                <!-- Monto del Gasto -->
+                <label for="monto" class="text-[#ba5e00] font-bold text-center w-full">Monto Gasto:</label>
+                <input type="number" id="monto" name="monto" class="w-full p-2 text-sm border border-gray-400 rounded bg-[#333333] text-white text-center focus:border-[#ba5e00] outline-none">
+
+                <!-- Categoría -->
+                <label for="categoria" class="text-[#ba5e00] font-bold text-center w-full">Categoría:</label>
+                <input type="text" id="categoria" name="categoria" class="w-full p-2 text-sm border border-gray-400 rounded bg-[#333333] text-white text-center focus:border-[#ba5e00] outline-none">
+
+                <!-- Botón para finalizar el registro -->
+                <button type="submit" class="bg-[#ba5e00] text-white py-2 text-lg font-bold rounded w-full mt-5 transition duration-300 ease-in-out hover:bg-[#d8a23e]">Guardar</button>
+            </form>
+        </main>
     </div>
 
-    <!-- Formulario de control de gastos -->
-    <div class="bg-black bg-opacity-40 mx-auto w-full md:w-3/4 lg:w-1/2 p-10 rounded-xl">
-      <form action="" method="post" class="space-y-6">
-        <div class="grid grid-cols-1 gap-6">
-
-          <!-- Contenedor de inputs alineados centrados -->
-          <div class="flex flex-col items-center space-y-4">
-            <!-- Nombre del gasto -->
-            <label for="nombre-gasto" class="block text-xl text-[#ba5e00] font-bold">Nombre del Gasto</label>
-            <input type="text" name="nombre-gasto" id="nombre-gasto" class="w-full max-w-md p-3 border border-gray-300 rounded-md bg-gray-600 text-white text-center focus:border-[#ba5e00] focus:outline-none">
-
-            <!-- Fecha -->
-            <label for="fecha" class="block text-xl text-[#ba5e00] font-bold">Fecha</label>
-            <input type="date" name="fecha" id="fecha" class="w-full max-w-md p-3 border border-gray-300 rounded-md bg-gray-600 text-white text-center focus:border-[#ba5e00] focus:outline-none">
-
-            <!-- Monto -->
-            <label for="monto" class="block text-xl text-[#ba5e00] font-bold">Monto</label>
-            <input type="number" name="monto" id="monto" class="w-full max-w-md p-3 border border-gray-300 rounded-md bg-gray-600 text-white text-center focus:border-[#ba5e00] focus:outline-none">
-
-            <!-- Receptor -->
-            <label for="receptor" class="block text-xl text-[#ba5e00] font-bold">Receptor</label>
-            <input type="text" name="receptor" id="receptor" class="w-full max-w-md p-3 border border-gray-300 rounded-md bg-gray-600 text-white text-center focus:border-[#ba5e00] focus:outline-none">
-
-            <!-- Categoría -->
-            <label for="categoria" class="block text-xl text-[#ba5e00] font-bold">Categoría</label>
-            <select name="Categoria" id="categoria" class="w-full max-w-md p-3 border border-gray-300 rounded-md bg-gray-600 text-white text-center focus:border-[#ba5e00] focus:outline-none">
-              <option value="textil">Textiles</option>
-              <option value="Compra Activos">Compra Activos</option>
-              <option value="Inversion Banco">Inversión Banco</option>
-              <option value="Uso Personal">Uso Personal</option>
-            </select>
-          </div>
-
-        </div>
-
-        <!-- Botón de guardar centrado -->
-        <div class="flex justify-center mt-6">
-          <button type="submit" class="bg-[#ba5e00] text-white font-bold py-3 px-6 rounded shadow-lg hover:bg-[#FFA500] transition-all transform hover:scale-105 hover:shadow-xl">
-            Guardar
-          </button>
-        </div>
-      </form>
-    </div>
-
-  </div>
+    <!-- Footer -->
+    <footer class="w-full text-center bg-black bg-opacity-60 py-4 mt-5">
+        <p class="text-[#ba5e00]">© 2024 Bell Check Finance. Todos los derechos reservados.</p>
+    </footer>
 
 </body>
 
