--- a/LG.html
+++ b/LG.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Interactive Animated Login Form</title>
+  <title> Login </title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="icon" href="img/WhatsApp_Image_2024-10-17_at_4.48.58_PM-removebg-preview.png">
+  <link rel="icon" href="img/Logo.png">
   <link rel="icon" href="img/Logo.png">
 </head>
 
@@ -16,6 +16,7 @@
   <nav class="absolute top-0 left-0 w-full bg-[#ba5e00] text-white py-4 px-8 z-10">
     <div class="flex justify-between items-center">
       <a href="index.html" class="text-white font-bold text-lg px-4 py-2 rounded-lg shadow-md transition duration-300 transform hover:bg-[#FFA500] hover:translate-y-[-5px]">INICIO</a>
+      <!-- Error por corregir en boton de inicio -->
       <span class="text-white text-2xl font-bold">Bell Check Finance</span>
       
     </div>
