--- a/interfaz.html
+++ b/interfaz.html
@@ -16,8 +16,7 @@
     <div class="navbar fixed top-0 w-full h-16 bg-[#222222] flex justify-between items-center px-5 shadow-md z-50">
         <!-- Logo e Título -->
         <div class="flex items-center space-x-3">
-            <img src="img/Logo.png" alt="Logo"
-                class="w-14 h-14 rounded-full">
+            <img src="img/Logo.png" alt="Logo" class="w-14 h-14 rounded-full">
             <h1 class="text-white text-xl font-semibold ">Bell Check Finance</h1>
         </div>
         <!-- Botón de Cerrar sesión con animación -->
