--- a/CCT.html
+++ b/CCT.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,13 +9,14 @@
     <link rel="stylesheet" href="css/contacto.css">
     <link rel="icon" href="img/Logo.png">
 </head>
+
 <body>
 
     <header class="navbar">
         <h1><img src="img/Logo.png" alt="Logo" class="navbar-logo"> Bell Check Finance</h1>
         <nav>
             <a href="index.html">Inicio</a>
-           
+
             <a href="LG.html">Login</a>
         </nav>
     </header>
@@ -22,7 +24,8 @@
     <main class="contact-section">
         <div class="contact-container">
             <h2>Contáctanos</h2>
-            <p>Si tienes alguna pregunta o comentario, no dudes en contactarnos. Completa el siguiente formulario y nos pondremos en contacto contigo lo antes posible.</p>
+            <p>Si tienes alguna pregunta o comentario, no dudes en contactarnos. Completa el siguiente formulario y nos
+                pondremos en contacto contigo lo antes posible.</p>
 
             <form action="enviar-formulario.php" method="POST" class="contact-form">
                 <div class="form-group">
@@ -55,4 +58,5 @@
     </footer>
 
 </body>
+
 </html>
