--- a/index.html
+++ b/index.html
@@ -13,15 +13,17 @@
 
 <body class="min-h-screen flex flex-col bg-gradient-to-br from-[#0a0908] to-[#ba5e00] text-white">
 
-    <!-- Navbar --> 
+    <!-- Navbar -->
     <header class="bg-[#ba5e00] fixed top-0 left-0 w-full z-10 shadow-lg p-4 flex justify-between items-center">
         <div class="flex items-center">
             <img src="img/Logo.png" alt="Logo de la Empresa" class="w-20 h-20 rounded-full mr-3">
             <h1 class="text-xl">Bell check Finance</h1>
         </div>
         <nav class="flex space-x-4 flex-1 justify-end">
-            <a href="CCT.html" class="bg-[#ba5e00] border  text-white text-lg font-bold py-3 px-6 rounded-lg shadow-lg transition-transform transform hover:bg-[#FFA500] hover:translate-y-[-5px]">Contacto</a>
-            <a href="LG.html" class="bg-[#ba5e00] border  text-white text-lg font-bold py-3 px-6 rounded-lg shadow-lg transition-transform transform hover:bg-[#FFA500] hover:translate-y-[-5px]">Login</a>
+            <a href="CCT.html"
+                class="bg-[#ba5e00] border  text-white text-lg font-bold py-3 px-6 rounded-lg shadow-lg transition-transform transform hover:bg-[#FFA500] hover:translate-y-[-5px]">Contacto</a>
+            <a href="LG.html"
+                class="bg-[#ba5e00] border  text-white text-lg font-bold py-3 px-6 rounded-lg shadow-lg transition-transform transform hover:bg-[#FFA500] hover:translate-y-[-5px]">Login</a>
         </nav>
     </header>
 
@@ -31,7 +33,8 @@
             <img src="img/Logo.png" alt="Imagen de la Empresa" class="w-full max-w-xl mx-auto rounded-xl shadow-md">
         </div>
         <h2 class="text-[#ba5e00] text-4xl mt-4">Bienvenido a Nuestra Empresa</h2>
-        <p class="text-lg mt-2">Nos especializamos en ofrecer soluciones financieras que mejoran la gestión de tu empresa.</p>
+        <p class="text-lg mt-2">Nos especializamos en ofrecer soluciones financieras que mejoran la gestión de tu
+            empresa.</p>
     </main>
 
     <!-- Secciones -->
@@ -40,7 +43,8 @@
             <h2 class="text-[#ba5e00] text-3xl mb-4">Contacto</h2>
             <p class="text-white">Puedes ponerte en contacto con nosotros a través del formulario o por teléfono.</p>
             <!-- Botón Contacto debajo de la sección -->
-            <a href="CCT.html" class="bg-[#ba5e00] text-white text-lg font-bold py-3 px-6 rounded-lg shadow-lg transition-transform transform hover:bg-[#FFA500] hover:translate-y-[-5px] mt-6 inline-block">Contacto</a>
+            <a href="CCT.html"
+                class="bg-[#ba5e00] text-white text-lg font-bold py-3 px-6 rounded-lg shadow-lg transition-transform transform hover:bg-[#FFA500] hover:translate-y-[-5px] mt-6 inline-block">Contacto</a>
         </div>
     </section>
 
@@ -49,15 +53,25 @@
             <h2 class="text-[#ba5e00] text-3xl mb-4">Login</h2>
             <p class="text-white">Accede a tu cuenta para gestionar tus servicios.</p>
             <!-- Botón Login debajo de la sección -->
-            <a href="LG.html" class="bg-[#ba5e00] text-white text-lg font-bold py-3 px-6 rounded-lg shadow-lg transition-transform transform hover:bg-[#FFA500] hover:translate-y-[-5px] mt-6 inline-block">Login</a>
+            <a href="LG.html"
+                class="bg-[#ba5e00] text-white text-lg font-bold py-3 px-6 rounded-lg shadow-lg transition-transform transform hover:bg-[#FFA500] hover:translate-y-[-5px] mt-6 inline-block">Login</a>
         </div>
     </section>
 
     <section id="resumen" class="py-8">
         <div class="max-w-3xl mx-auto p-6 bg-[#0a0908] rounded-xl shadow-lg text-center">
             <h2 class="text-[#ba5e00] text-3xl mb-4">Resumen de la Empresa</h2>
-            <p class="text-white">El administrador de una pequeña empresa enfrenta desafíos al llevar un registro manual de facturas y gastos, lo que puede generar errores y dificultar el seguimiento financiero. Este método es ineficiente y consume tiempo que podría aprovecharse en otras áreas del negocio. Para mejorar la precisión y eficiencia, se propone adoptar una herramienta automatizada para la facturación y el control de gastos, lo que simplificaría el proceso y mejoraría la fiabilidad de la gestión financiera.</p>
-            <p class="text-white mt-4">La aplicación Bell Check Finance, creada en 2024 por estudiantes de la Institución Universitaria Cesde, ofrece una solución a estas tareas. Permite al administrador registrar facturas, controlar gastos y generar reportes en formato PDF, lo que facilita la organización y el flujo de información. Esta herramienta está diseñada para ayudar a los emprendedores a gestionar sus finanzas de manera efectiva, evitando riesgos como la bancarrota y contribuyendo a un entorno empresarial más estable.</p>
+            <p class="text-white">El administrador de una pequeña empresa enfrenta desafíos al llevar un registro manual
+                de facturas y gastos, lo que puede generar errores y dificultar el seguimiento financiero. Este método
+                es ineficiente y consume tiempo que podría aprovecharse en otras áreas del negocio. Para mejorar la
+                precisión y eficiencia, se propone adoptar una herramienta automatizada para la facturación y el control
+                de gastos, lo que simplificaría el proceso y mejoraría la fiabilidad de la gestión financiera.</p>
+            <p class="text-white mt-4">La aplicación Bell Check Finance, creada en 2024 por estudiantes de la
+                Institución Universitaria Cesde, ofrece una solución a estas tareas. Permite al administrador registrar
+                facturas, controlar gastos y generar reportes en formato PDF, lo que facilita la organización y el flujo
+                de información. Esta herramienta está diseñada para ayudar a los emprendedores a gestionar sus finanzas
+                de manera efectiva, evitando riesgos como la bancarrota y contribuyendo a un entorno empresarial más
+                estable.</p>
         </div>
     </section>
 
