--- a/Index/HTML/LG.html
+++ b/Index/HTML/LG.html
@@ -15,7 +15,7 @@
   <!-- Barra de navegación -->
   <nav class="absolute top-0 left-0 w-full bg-[#ba5e00] text-white py-4 px-8 z-10">
     <div class="flex justify-between items-center">
-      <a href="index.html"
+      <a href="https://juanzapatat.github.io/Final-HTML/"
         class="text-white font-bold text-lg px-4 py-2 rounded-lg shadow-md transition duration-300 transform hover:bg-[#FFA500] hover:translate-y-[-5px]">INICIO</a>
       <!-- Error por corregir en boton de inicio -->
       <span class="text-white text-2xl font-bold">Bell Check Finance</span>
