--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;700&display=swap" rel="stylesheet">
     <!-- Vincula Tailwind CSS desde CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="icon" href="img/Logo.png">
+    <link rel="icon" href="Index/HTML/img/Logo.png">
 </head>
 
 <body class="min-h-screen flex flex-col bg-gradient-to-br from-[#0a0908] to-[#ba5e00] text-white">
@@ -16,13 +16,13 @@
     <!-- Navbar -->
     <header class="bg-[#ba5e00] fixed top-0 left-0 w-full z-10 shadow-lg p-4 flex justify-between items-center">
         <div class="flex items-center">
-            <img src="img/Logo.png" alt="Logo de la Empresa" class="w-20 h-20 rounded-full mr-3">
+            <img src="Index/HTML/img/Logo.png" alt="Logo de la Empresa" class="w-20 h-20 rounded-full mr-3">
             <h1 class="text-xl">Bell check Finance</h1>
         </div>
         <nav class="flex space-x-4 flex-1 justify-end">
-            <a href="CCT.html"
+            <a href="Index/HTML/CCT.html"
                 class="bg-[#ba5e00] border  text-white text-lg font-bold py-3 px-6 rounded-lg shadow-lg transition-transform transform hover:bg-[#FFA500] hover:translate-y-[-5px]">Contacto</a>
-            <a href="LG.html"
+            <a href="Index/HTML/LG.html"
                 class="bg-[#ba5e00] border  text-white text-lg font-bold py-3 px-6 rounded-lg shadow-lg transition-transform transform hover:bg-[#FFA500] hover:translate-y-[-5px]">Login</a>
         </nav>
     </header>
@@ -30,7 +30,7 @@
     <!-- Hero Section -->
     <main class="flex-1 text-center p-8 bg-[#0a0908] rounded-xl mt-24 shadow-lg mx-4">
         <div class="max-w-full mx-auto mb-8">
-            <img src="img/Logo.png" alt="Imagen de la Empresa" class="w-full max-w-xl mx-auto rounded-xl shadow-md">
+            <img src="Index/HTML/img/Logo.png" alt="Imagen de la Empresa" class="w-full max-w-xl mx-auto rounded-xl shadow-md">
         </div>
         <h2 class="text-[#ba5e00] text-4xl mt-4">Bienvenido a Nuestra Empresa</h2>
         <p class="text-lg mt-2">Nos especializamos en ofrecer soluciones financieras que mejoran la gestión de tu
@@ -43,7 +43,7 @@
             <h2 class="text-[#ba5e00] text-3xl mb-4">Contacto</h2>
             <p class="text-white">Puedes ponerte en contacto con nosotros a través del formulario o por teléfono.</p>
             <!-- Botón Contacto debajo de la sección -->
-            <a href="CCT.html"
+            <a href="Index/HTML/CCT.html"
                 class="bg-[#ba5e00] text-white text-lg font-bold py-3 px-6 rounded-lg shadow-lg transition-transform transform hover:bg-[#FFA500] hover:translate-y-[-5px] mt-6 inline-block">Contacto</a>
         </div>
     </section>
@@ -53,7 +53,7 @@
             <h2 class="text-[#ba5e00] text-3xl mb-4">Login</h2>
             <p class="text-white">Accede a tu cuenta para gestionar tus servicios.</p>
             <!-- Botón Login debajo de la sección -->
-            <a href="LG.html"
+            <a href="Index/HTML/LG.html"
                 class="bg-[#ba5e00] text-white text-lg font-bold py-3 px-6 rounded-lg shadow-lg transition-transform transform hover:bg-[#FFA500] hover:translate-y-[-5px] mt-6 inline-block">Login</a>
         </div>
     </section>
